# ShaderPractice

./: CMakeLists.txt  README.md
data/: test-01.json  test-02.json  test-03.json  test-04.json  test-05.json  test-06.json  test-07.json  test-08.json
include/: REDRUM.h  STR.h  create_shader_program_from_files.h  icosahedron.h  mesh_to_vao.h  print_program_info_log.h  print_shader_info_log.h  read_json.h
include/glad/: glad.h
shaders/: 5.tcs  blinn_phong.glsl  blue_and_gray.fs  bump.fs  bump_height.glsl  bump_position.glsl  improved_perlin_noise.glsl  improved_smooth_step.glsl  lit.fs  model.glsl  model_view_projection.vs  pass-through.vs  perlin_noise.glsl  planet.fs  procedural_color.fs  random_direction.glsl  rotate_about_y.glsl  smooth_step.glsl  snap_to_sphere.tes  tangent.glsl  translate.glsl  uniform_scale.glsl
src/: Input.cpp  Input.h  config.h  glad.c  main.cpp
